self-traning/manifests/efk/cloudd copy/02-ek-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: efk
spec:
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:7.10.0
        resources:
          limits:
            memory: 2Gi
            cpu: 500m
        ports:
        - containerPort: 9200
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: efk
spec:
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:7.10.0
        volumeMounts:
        # - name: varlog
        #   mountPath: /var/log
        #   readOnly: true
        - name: kibana-config
          mountPath: /usr/share/kibana/config/
        resources:
          limits:
            memory: 500M
            cpu: 500m
        ports:
        - containerPort: 5601
      volumes:
      #- name: varlog
      #  hostPath:
      #    path: /var/log
      - name: kibana-config
        configMap:
          name: kibana-config
