self-traning/manifests/efk/cloudd copy/03-ek-svc.yml
---

kind: Service
apiVersion: v1
metadata:
  name:  elasticsearch-svc
  namespace: efk
spec:
  selector:
    app: elasticsearch
  type:  ClusterIP
  ports:
  - name:  main
    port:  9200
    targetPort:  9200

---

kind: Service
apiVersion: v1
metadata:
  name:  kibana-svc
  namespace: efk
spec:
  selector:
    app: kibana
  type:  ClusterIP
  ports:
  - name:  ui
    port:  5601
    targetPort:  5601
